--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,13 @@
       content="Daily Diet allows you to easily build diet plans that will help you achieve your dream figure. You can use an extensive database of ready-made products, as well as add your own ingredients."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Daily Diet</title>
   </head>
   <body>
